feat: enhance event processing and database schema for better error handling and data persistence