@@ -24,15 +24,15 @@ public class EventOddsTimeline extends EventOdds {
     public EventOddsTimeline(ElementHandle li, String market) {
         this.market = market;
         var allLineOdds = li.querySelectorAll(".firstSpan");
-
+        li.waitForSelector(".oddsBox");
         var oddsBox = li.querySelectorAll(".oddsBox");
-        if ("hdc".equalsIgnoreCase(market)) {
+        var isHdc = "hdc".equalsIgnoreCase(market);
+        if (isHdc) {
             if (allLineOdds.size() == 3) {
                 date = StringUtil.normalizeText(allLineOdds.getFirst().textContent());
             } else {
                 matchMinute = StringUtil.normalizeText(allLineOdds.getFirst().textContent());
             }
-            li.waitForSelector(".oddsBox");
             this.line = oddsBox.stream().map(el -> {
                 var hdcEle = el.querySelector(".handicap.handicapRight");
                 return StringUtil.normalizeText(Optional.ofNullable(hdcEle).map(ElementHandle::textContent).orElse(null));
@@ -45,14 +45,40 @@ public class EventOddsTimeline extends EventOdds {
             }
             this.line = oddsBox.isEmpty() ? null : StringUtil.normalizeText(oddsBox.getFirst().textContent());
         }
-        parsePricesFromOddsBox(oddsBox);
+        parsePricesFromOddsBox(oddsBox, isHdc);
     }
 
-    private void parsePricesFromOddsBox(java.util.List<? extends ElementHandle> oddsBox) {
-        if (oddsBox == null || oddsBox.size() < 2) return;
-        var a = OddConverter.parse(StringUtil.normalizeText(oddsBox.get(oddsBox.size() - 2).textContent()));
-        var b = OddConverter.parse(StringUtil.normalizeText(oddsBox.get(oddsBox.size() - 1).textContent()));
+    private void parsePricesFromOddsBox(java.util.List<? extends ElementHandle> oddsBox, boolean isHdc) {
+        if (oddsBox == null || oddsBox.isEmpty()) return;
+        if (oddsBox.size() < 2) return;
+        Double a = null;
+        Double b = null;
+        if (isHdc) {
+            if (oddsBox.size() == 2) {
+                a = parseHdcOddsText(oddsBox.getFirst());
+                b = parseHdcOddsText(oddsBox.get(1));
+            } else {
+                var priceAElement = oddsBox.get(oddsBox.size() - 2);
+                var priceBElement = oddsBox.getLast();
+                a = parseHdcOddsText(priceAElement);
+                b = parseHdcOddsText(priceBElement);
+            }
+        } else {
+            a = OddConverter.parse(StringUtil.normalizeText(oddsBox.get(oddsBox.size() - 2).textContent()));
+            b = OddConverter.parse(StringUtil.normalizeText(oddsBox.getLast().textContent()));
+        }
+
         if (a != null) setPriceA(BigDecimal.valueOf(a));
         if (b != null) setPriceB(BigDecimal.valueOf(b));
+    }
+
+    private static Double parseHdcOddsText(ElementHandle el) {
+        if (el == null) return null;
+        try {
+            String raw = el.evaluate("node => { const h = node.querySelector('.handicap.handicapRight'); const t = (node.innerText || node.textContent || '').trim(); return h ? t.replace(h.textContent.trim(), '').trim() : t; }").toString();
+            return OddConverter.parse(StringUtil.normalizeText(raw));
+        } catch (Exception e) {
+            return OddConverter.parse(StringUtil.normalizeText(el.textContent()));
+        }
     }
 }
